--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,11 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# index:
+#   path: /
+#   controller: App\Controller\DefaultController::index
+
+# blog:
+#   path: /blog
+#   controller: App\Controller\DefaultController::blog
