--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,6 +4,16 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+redirecthomepage:
+    path: /homepage
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
+    defaults:
+        route: 'blog_homepage'
+        permanent: true
+        keepQueryParams: true 
+
+
+
 # index:
 #   path: /
 #   controller: App\Controller\DefaultController::index
