--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,7 @@
 twig:
     file_name_pattern: '*.twig'
     paths:
-        '%kernel.project_dir%/templates/emails': "emails"
+        'templates/emails': "emails"
 
 when@test:
     twig:
