--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,6 +4,12 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+cgu:
+    path: /cgu
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults: 
+        template: cgu.html.twig
+
 # redirecthomepage:
 #     path: /homepage
 #     controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
