--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $adminEmail: 'contact@alice.com'
+            $logger: '@logger'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -24,6 +27,9 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     App\Services\MyLog:
+        public: true
         arguments:
             $filename: Logs/log2.txt
             $logger: '@logger'
+            
+    Symfony\Component\DependencyInjection\ContainerInterface: '@service_container'
