--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,7 @@ twig:
     file_name_pattern: '*.twig'
     paths:
         'templates/emails': "emails"
+    form_themes: ['bootstrap_5_layout.html.twig']
 
 when@test:
     twig:
