--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,7 +2,9 @@ twig:
     file_name_pattern: '*.twig'
     paths:
         'templates/emails': "emails"
-    form_themes: ['bootstrap_5_layout.html.twig']
+    # form_themes: ['bootstrap_5_layout.html.twig']
+    form_themes: ['form-theme.html.twig']
+
 
 when@test:
     twig:
