--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,7 +6,15 @@ framework:
     default_locale: 'fr' 
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: true
+    session:
+        handler_id: session.handler.native_file
+        # Pour une semaine :
+        cookie_lifetime: 604800
+        gc_maxlifetime: 604800
+        sid_bits_per_character: 5
+        cookie_secure: true
+        cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
 
     #esi: true
     fragments: true
